[package]
name = "ht"
version = "0.1.0"
authors = ["Mark Burnett <mark.m.burnett@gmail.com>"]

[dependencies]
ansi_term = "0.10"
failure = "0.1"
lazy_static = "1.0"
reqwest = "0.8"
serde_json = "1.0"

[dependencies.clap]
version = "2.30"
default-features = false
features = [ "color", "suggestions", "vec_map" ]
